--- a/giaodien/QuanLyKhachSan/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/giaodien/QuanLyKhachSan/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -53,9 +53,14 @@
     <Compile Include="admin.Designer.cs">
       <DependentUpon>admin.cs</DependentUpon>
     </Compile>
+    <Compile Include="DAO\CategoryRoom.cs" />
+    <Compile Include="DAO\KindGuestDAO.cs" />
+    <Compile Include="DAO\KindOfRoomDAO.cs" />
     <Compile Include="DAO\RoomDAO.cs" />
     <Compile Include="DAO\VoucherDAO.cs" />
     <Compile Include="DAO\VoucherInfoDAO.cs" />
+    <Compile Include="DTO\KindGuest.cs" />
+    <Compile Include="DTO\KindOfRoom.cs" />
     <Compile Include="DTO\Room.cs" />
     <Compile Include="DTO\Voucher.cs" />
     <Compile Include="DTO\VoucherInfo.cs" />
@@ -89,12 +94,6 @@
       <DependentUpon>QuanLyKhachSanDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="RoomKind.cs" />
-    <Compile Include="RoomRentVoucher.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RoomRentVoucher.Designer.cs">
-      <DependentUpon>RoomRentVoucher.cs</DependentUpon>
-    </Compile>
     <Compile Include="TableManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,9 +122,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="RoomRentVoucher.resx">
-      <DependentUpon>RoomRentVoucher.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="TableManager.resx">
       <DependentUpon>TableManager.cs</DependentUpon>
     </EmbeddedResource>
